MSS-214 fixed z-index for radio player controls

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -109,7 +109,7 @@ body {
 #back-to-landing {
     text-align: left;
     display: inline-block;
-    z-index: 5;
+    z-index: 20;
     position: absolute;
     top: 2em;
     left: 2em;
