--- a/resources/assets/sass/radio/radio-detail.scss
+++ b/resources/assets/sass/radio/radio-detail.scss
@@ -23,7 +23,7 @@
         color: #fff;
     }
     #header {
-        z-index: 4;
+        z-index: 10;
         position: relative;
     }
 
