--- a/resources/assets/sass/sticky-navigation.scss
+++ b/resources/assets/sass/sticky-navigation.scss
@@ -4,7 +4,7 @@
     width: 100%;
     background: #fff;
     height: 96px;
-    z-index: 10;
+    z-index: 100;
     box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.20);
     border-top: 1px solid $colour-light-grey;
     .navigation-title {
